# ui_agent

./: .editorconfig  .env.example  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json
apps/agent/: Dockerfile  app.py  persistence.py  pyproject.toml  service.py
apps/agent/local_figma_agent/: api.py  build_validator.py  file_service.py  models.py  orchestrator.py  patch_executor.py  providers.py  repository.py  snapshot_service.py  source_mapper.py
apps/agent/local_figma_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/agent/tests/: test_agent.py  test_patch_executor.py  test_persistence.py  test_source_mapper.py
apps/runtime/: Dockerfile  package.json  selection-overlay.js  server.mjs
apps/web/: Dockerfile  next.config.ts  package.json  server.mjs  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/api/orchestrate/: route.ts
apps/web/app/api/sessions/[sessionId]/selected-elements/: route.ts
apps/web/app/api/sessions/[sessionId]/snapshots/: route.ts
apps/web/app/api/workspace-status/: route.ts
apps/web/app/health/: route.ts
apps/web/src/components/: operator-workspace.module.css  operator-workspace.tsx
apps/web/src/lib/: agent-api.ts  workspace-status.ts
docs/: contracts.md  operator-runbook.md  patch-strategy.md  preview-bridge.md  reference-adoption.md
infra/migrations/: 0001_init.sql  0002_persistence.sql  0003_selection_payload_shape.sql  0004_snapshots.sql
scripts/: integration-test.sh
workspace/: README.md
workspace/preview/: index.html
(+1 files in other folders)
