[build-system]
requires = ["setuptools>=58.0.4"]
build-backend = "setuptools.build_meta"

[project]
name = "local-figma-agent"
version = "0.1.0"
requires-python = ">=3.11"
description = "LangGraph orchestration service for the Local Figma agent"
dependencies = [
  "fastapi>=0.115.12,<1.0.0",
  "langgraph>=0.6.0,<1.0.0",
  "openai>=1.75.0,<2.0.0",
  "psycopg[binary]>=3.2.6,<4.0.0",
  "uvicorn>=0.34.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1,<1.0.0",
  "pytest>=8.3.5,<9.0.0",
]

[tool.pytest.ini_options]
pythonpath = [
  ".",
]
testpaths = [
  "tests",
]

[tool.setuptools]
py-modules = ["app"]

[tool.setuptools.packages.find]
where = ["."]
include = ["local_figma_agent*"]
